--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <body>
     <header>
         <a href="index.html" target="_self" title="Homepage"><h1>Sustainable DKU</h1></a>
-        <img src="logo.jpg" height="100">
+        <img src="images/logo.jpg" height="100">
         <nav>
             <a href="AboutUs.html" target="_self" title="About Us">About Us</a>
             <a href="OurInitiatives.html" target="_self" title="Our Initiatives">Our Initiatives</a>
@@ -28,7 +28,7 @@
         </h2>
         <div>
             <div>
-                <img src="DKU.jpeg" alt="DKU" height="100">
+                <img src="images/DKU.jpeg" alt="DKU" height="100">
             </div>
             <div>
                 <p>
