--- a/index.html
+++ b/index.html
@@ -4,14 +4,16 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Homepage</title>
+    <link rel="stylesheet" href="index.css">
 </head>
 <body>
     <header>
-        <a href="index.html" target="_self" title="Homepage"><h1>Sustainable DKU</h1></a>
-        <img src="images/logo.jpg" height="100">
         <nav>
             <a href="AboutUs.html" target="_self" title="About Us">About Us</a>
             <a href="OurInitiatives.html" target="_self" title="Our Initiatives">Our Initiatives</a>
+            <a href="index.html" target="_self" title="Homepage">
+                <img src="images/logo.jpg" id="logo">
+            </a>
             <a href="SustainabilityGuide.html" target="_self" title="Sustainability Guide">Sustainability Guide</a>
             <a href="GetInvolved.html" target="_self" title="Get Involved!">Get Involved</a>
         </nav>
