--- a/index.html
+++ b/index.html
@@ -18,29 +18,40 @@
             <a href="GetInvolved.html" target="_self" title="Get Involved!">Get Involved</a>
         </nav>
     </header>
+    <main>
+    <div class="banner-img">
+        <!-- Wide image underneath Nav Bar. Text & read more button overlay image -->
+        <img src="images/pavilionwide.jpg" alt="DKU water pavilion">
+        <div id="overlay-text">DKU's First Sustainability Report</div>
+        <button>Read It Here</button>
+    </div>
+    <!-- Content in 50/50 split columns -->
     <section>
-        <h2>Explore Eco-Friendly Intiatives</h2>
-        <p>promote sustainable living practices, and collaborate on projects that 
-            contribute to a greener future and a meaningful future on DKU and the world.</p>
-        <button>read more</button>
-    </section>
-    <section>
-        <h2>
-            Highlight of the Month
-        </h2>
-        <div>
-            <div>
-                <img src="images/DKU.jpeg" alt="DKU" height="100">
+        <div class="column5">
+            <h2>Explore Eco-Friendly Intiatives</h2>
+            <p>promote sustainable living practices, and collaborate on projects that 
+                contribute to a greener future and a meaningful future on DKU and the world.</p>
+            <button>read more</button>
             </div>
+        <div class="column5">
+            <h2>
+                Highlight of the Month
+            </h2>
             <div>
-                <p>
-                John has been working on things. 
-                He is very good at these things! 
-                Many people joined him, congrats to John!
-                <button>more projects</button>
-                </p>
+                <div class="column5">
+                    <img src="images/DKU.jpeg" alt="DKU">
+                </div>
+                <div class="column5">
+                    <p>
+                    John has been working on things. 
+                    He is very good at these things! 
+                    Many people joined him, congrats to John!
+                    <button>more projects</button>
+                    </p>
+                </div>
             </div>
         </div>
     </section>
+    </main>
 </body>
 </html>
