--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <header>
         <nav>
-            <a href="AboutUs.html" target="_self" title="About Us">About Us</a>
+            <a href="about.html" target="_self" title="About Us">About Us</a>
             <a href="OurInitiatives.html" target="_self" title="Our Initiatives">Our Initiatives</a>
             <a href="index.html" target="_self" title="Homepage">
                 <img src="images/logo.jpg" id="logo">
