Update href in about.html

--- a/about.html
+++ b/about.html
@@ -30,12 +30,12 @@
 				<input type="checkbox" id="menu">
 				<label for="menu"><i class="fas fa-bars"></i></label>
 				<ul class="menuList">
-					<li><a href="#">Home</a></li>
-					<li><a href="#">About Us</a></li>
-					<li><a href="#">Contact</a></li>
-					<li><a href="#">Guides</a></li>
-					<li><a href="#">Projects</a></li>
-					<li><a href="#">Get Involved</a></li>
+					<li><a href="index.html">Home</a></li>
+					<li><a href="about.html">About Us</a></li>
+					<li><a href="contact.html">Contact</a></li>
+					<li><a href="SustainabilityGuide.html">Guides</a></li>
+					<li><a href="OurInitiatives.html">Projects</a></li>
+					<li><a href="GetInvolved.html">Get Involved</a></li>
 				</ul>
 			</div>
 		</nav>
