--- a/index.html
+++ b/index.html
@@ -7,17 +7,35 @@
     <link rel="stylesheet" href="index.css">
 </head>
 <body>
-    <header>
-        <nav>
-            <a href="about.html" target="_self" title="About Us">About Us</a>
-            <a href="OurInitiatives.html" target="_self" title="Our Initiatives">Our Initiatives</a>
-            <a href="index.html" target="_self" title="Homepage">
-                <img src="images/logo.jpg" id="logo">
-            </a>
-            <a href="SustainabilityGuide.html" target="_self" title="Sustainability Guide">Sustainability Guide</a>
-            <a href="GetInvolved.html" target="_self" title="Get Involved!">Get Involved</a>
-        </nav>
-    </header>
+    <!--Menu-->
+	<header>
+		<div class="top">
+			<div class="container">
+				<ul class="lang">
+					<a href="#"><img src="images/icons/language.png" height="35px"></a>
+				</ul>
+			</div>
+		</div>
+
+		<nav>
+			<div class="container">
+				<a href="#" class="logo">
+					<img src="images/new_susDKUlogo.png">
+				</a>
+				
+				<input type="checkbox" id="menu">
+				<label for="menu"><i class="fas fa-bars"></i></label>
+				<ul class="menuList">
+					<li><a href="index.html">Home</a></li>
+					<li><a href="about.html">About Us</a></li>
+					<li><a href="contact.html">Contact</a></li>
+					<li><a href="SustainabilityGuide.html">Guides</a></li>
+					<li><a href="OurInitiatives.html">Projects</a></li>
+					<li><a href="GetInvolved.html">Get Involved</a></li>
+				</ul>
+			</div>
+		</nav>
+	</header>
     <main>
     <div class="banner-img">
         <!-- Wide image underneath Nav Bar. Text & read more button overlay image -->
