--- a/index.html
+++ b/index.html
@@ -68,24 +68,24 @@
     <main>
 		<section>
 			<div class="column5">
-				<h2>Explore Eco-Friendly Intiatives</h2>
-				<p>promote sustainable living practices, and collaborate on projects that 
-					contribute to a greener future and a meaningful future on DKU and the world. Our
-                    club is focusing not just making campus more green, but also promoting sustainable
-                    progress within the local Shanghai-Kunshan-Suzhou area and the various international
-                communities DKU students are a part of.</p>
+				<h2>Explore On-Campus Intiatives</h2>
+				<p>Want to get involved? SDKU is working on a variety of projects that are helping the
+					campus and our community be more sustainable! Check them out below or join a weekly meeting
+					at XX-XX.
+				</p>
                 <br>
-				<button>read more</button>
+				<button>
+					<a href="projects.html">SDKU Projects</a>
+				</button>
                 <br>
                 <br>
-                <h2>Search Easily for Eco Opportunities</h2>
-				<p>The Sustainable DKU website hosts a range lists of opportunities to get
-                    involved in sustainable related opportunities. Whether on campus through a 
-                    research project, local vegetarian convention, or an international grant, you
-                    can easily search through our website and find the one that best ineterst you!
-                </p>
+               			<h2>In The News</h2>
+				<p>Read more about sustainability events and environmental news at DKU, locally, and abroad!
+				</p>	
                 <br>
-                <button>Start exploring!</button>
+                <button>
+			<a href="news.html">Start exploring!</a>
+		</button>
                 <br>
 				</div>
 			<div class="column5">
