--- a/about.html
+++ b/about.html
@@ -73,7 +73,7 @@
 								</div>
 							</a></li>
 							<li class="thumb-wrap"><a href="">
-								<img class="thumb" src="images/about_page_pics/weijia_vicepres.png" alt="">
+								<img class="thumb" src="images/about_page_pics/Aneliese_VP.jpg" alt="">
 								<div class="thumb-info">
 									<p class="thumb-title">Aneliese Morales</p>
 									<p class="thumb-user">Vice President</p>
@@ -108,11 +108,12 @@
 								</div>
 							</a></li>
 							<li class="thumb-wrap"><a href="">
-								<img class="thumb" src="images/about_page_pics/brandon_treasurer.png" alt="">
+								<img class="thumb" src="images/about_page_pics/Coco_secretary.jpg" alt="">
 								<div class="thumb-info">
-									<p class="thumb-title">Brandon Li</p>
-									<p class="thumb-user">Treasurer</p>
-									<p class="thumb-text">Class of 2024</p>
+									<p class="thumb-title">Coco Zhang</p>
+									<p class="thumb-user">Secretary</p>
+									<p class="thumb-text">Coco is a freshman student from Las Vegas, Nevada, intending to major in Institutions and Governance. She hopes to work in the environmental law and policy arena. 
+									She joined SDKU because she knows that big changes start small!</p>
 								</div>
 							</a></li>
 							<li class="thumb-wrap"><a href="">
@@ -124,7 +125,7 @@
 								</div>
 							</a></li>
 							<li class="thumb-wrap"><a href="">
-								<img class="thumb" src="images/about_page_pics/aneliese_comms_cochair.png" alt="">
+								<img class="thumb" src="images/about_page_pics/Yixuan_comms.jpg" alt="">
 								<div class="thumb-info">
 									<p class="thumb-title">Yixuan Gao</p>
 									<p class="thumb-user">Communications Co-Chair</p>
