--- a/about.html
+++ b/about.html
@@ -64,7 +64,7 @@
 						<p class="image-sec-title">2023-2024 Club Officers</p>
 						<ul class="image-sec-middle" id="vid-grid">
 							<li class="thumb-wrap"><a href="">
-								<img class="thumb" src="images/about_page_pics/emerson_cofounder_pres.png"  alt="">
+								<img class="thumb" src="images/about_page_pics/CES headshot.jpeg"  alt="">
 								<div class="thumb-info">
 									<p class="thumb-title">Cody Schmidt</p>
 									<p class="thumb-user">President</p>
