--- a/projects.html
+++ b/projects.html
@@ -74,6 +74,17 @@
 					  </div>
 					</div>
 				  </li>
+				<li class="cards_item">
+					<div class="card">
+					  <div class="card_image"><img src="images/plastic-waste-3962409_1280.jpg" width="500px" height="300px"></div>
+					  <div class="card_content">
+						<h2 class="card_title">Food Waste Prevention</h2>
+						<p class="card_text">SDKU’s Food Waste group is working on how to maintain eco-conscious food habits through canteen interventions. 
+					As a part of an interdisciplinary school we combine fields like behavioral science in our proposals to further advance both student knowledge and sustainable habits. Working with food waste means being conscious of both our output and our preliminary habits. 
+					Through SDKU we hope to continue contributing to Duke Kunshan University’s culture of a clean and green community!</p>
+					  </div>
+					</div>
+				  </li>
 				  <li class="cards_item">
 					<div class="card">
 					  <div class="card_image"><img src="images/thrift store.jpg" width="500px" height="300px" ></div>
