--- a/about.html
+++ b/about.html
@@ -82,11 +82,12 @@
 								</div>
 							</a></li>
 							<li class="thumb-wrap"><a href="">
-								<img class="thumb" src="images/about_page_pics/aisha_projectdirector.png" alt="">
+								<img class="thumb" src="images/about_page_pics/Isabella_PD.jpg" alt="">
 								<div class="thumb-info">
 									<p class="thumb-title">Isabella Kroon</p>
 									<p class="thumb-user">Project Director</p>
-									<p class="thumb-text">Isabella is a senior student majoring in Computation and Design on the Social Policy track with an Environmental Sustainability concentration. She is interested in the influence of policy on environmental justice.</p>
+									<p class="thumb-text">Isabella is a senior student majoring in Computation and Design on the Social Policy track with an Environmental Sustainability concentration. 
+										She is interested in environmental data analytics and understanding the influence of policy on environmental justice.</p>
 								</div>
 							</a></li>
 							<li class="thumb-wrap"><a href="">
@@ -100,28 +101,12 @@
 								</div>
 							</a></li>
 							<li class="thumb-wrap"><a href="">
-								<img class="thumb" src="images/about_page_pics/anthony_eventscoordinator.png" alt="">
-								<div class="thumb-info">
-									<p class="thumb-title">Anthony Liao Yates</p>
-									<p class="thumb-user">Events Coordinator</p>
-									<p class="thumb-text">Class of 2025</p>
-								</div>
-							</a></li>
-							<li class="thumb-wrap"><a href="">
 								<img class="thumb" src="images/about_page_pics/Coco_secretary.jpg" alt="">
 								<div class="thumb-info">
 									<p class="thumb-title">Coco Zhang</p>
 									<p class="thumb-user">Secretary</p>
 									<p class="thumb-text">Coco is a freshman student from Las Vegas, Nevada, intending to major in Institutions and Governance. She hopes to work in the environmental law and policy arena. 
 									She joined SDKU because she knows that big changes start small!</p>
-								</div>
-							</a></li>
-							<li class="thumb-wrap"><a href="">
-								<img class="thumb" src="images/about_page_pics/cody_promotion_membershipchair.png" alt="">
-								<div class="thumb-info">
-									<p class="thumb-title">Cody Schmidt</p>
-									<p class="thumb-user">Promotion & Membership Chair</p>
-									<p class="thumb-text">Class of 2025</p>
 								</div>
 							</a></li>
 							<li class="thumb-wrap"><a href="">
@@ -134,14 +119,7 @@
 									She can be reached at yg248@duke.edu, linkedin.com/in/翊萱-高-138004324, or on Instagram @gyx980323 . </p>
 								</div>
 							</a></li>
-							<li class="thumb-wrap"><a href="">
-								<img class="thumb" src="images/about_page_pics/kris_comms_cochair.png" alt="">
-								<div class="thumb-info">
-									<p class="thumb-title">Kris Sun</p>
-									<p class="thumb-user">Communications Co-Chair</p>
-									<p class="thumb-text">Class of 2027</p>
-								</div>
-							</a></li>
+							
 						</ul>
 						<a class="image-showmore">Interested in Joining?</a>
 					</div>
@@ -155,12 +133,7 @@
 		
 		<!-- Tab Content -->
 		<div id="MainContent" class="tabcontent" style="display: block;">
-			<h1 id="what"><i>What we do</i></h1>
-			<br>
-			<p>Sustainable DKU is a student-led sustainability initiative that promotes sustainable living, raises an educated and informed generation,
-				 and creates an international, interdisciplinary platform to solve environmental issues. We envision a world where sustainable lifestyles are desirable and accessible for everyone, 
-				 and are facilitated by all sectors of society. </p>
-			<h1 id="who"><i>Who we are</i></h1>
+			<h1 id="who"><i>Past Leadership</i></h1>
 			
 				 <article class="image-sec-wrap">
 					<div class="image-sec">
@@ -252,8 +225,8 @@
 		<div id="History" class="tabcontent">
 			<h1 id="what"><i>Our Club History</i></h1>
 			<br>
-			<p id="history_blurb">Sustainable DKU was founded by the need for the then Newly founded DKU to have an official student space advocating for environmental issues and sustainability.
-				Since then, we have achieved many goals both within the school and larger community and yes. </p>
+			<p id="history_blurb">Sustainable DKU was founded in order to have an official student space to advocate for environmental issues and sustainability.
+				Since then, we have achieved many goals both within the school and larger community, and we continue to advocate for an official sustainability office at DKU. </p>
 				<br>
 				 <h1 id="Timeline_h1">Club Timeline</h1>
 				 <ul class="timeline_ul">
