--- a/guides.html
+++ b/guides.html
@@ -49,7 +49,7 @@
 		<br>
 		
 		<div class="tab">
-			<button class="tablinks" onclick="opencategory(event, 'category1')" id="defaultOpen">category1</button>
+			<button class="tablinks" onclick="opencategory(event, 'category1')" id="defaultOpen">Shanghai Sustainability Guide</button>
 			<button class="tablinks" onclick="opencategory(event, 'category2')">category2</button>
 			<button class="tablinks" onclick="opencategory(event, 'category3')">category3</button>
 			<button class="tablinks" onclick="opencategory(event, 'category4')">category4</button>
@@ -57,8 +57,8 @@
 		</div>
 			  
 		<div id="category1" class="tabcontent">
-			<h3>category1</h3>
-			<p>category1</p>
+			<h3>Shanghai Sustainability Guide</h3>
+			<p>This guide outlines more sustainable food, shopping, and outings in Kunshan and Shanghai.</p>
 		</div>
 			  
 		<div id="category2" class="tabcontent">
