--- a/about.html
+++ b/about.html
@@ -95,7 +95,7 @@
 								<div class="thumb-info">
 									<p class="thumb-title">Anthony Yates</p>
 									<p class="thumb-user">Events Coordinator</p>
-									<p class="thumb-text">As events coordinator, Anothony helps manage and plan events within SDKU and the greater DKU community. He frequently helps initiate fundraising activities and projects for charities in the climate action sector.
+									<p class="thumb-text">Anthony is a senior student majoring in Environmental Science with a track in Biogeochemistry. As events coordinator, Anothony helps manage and plan events within SDKU and the greater DKU community. He frequently helps initiate fundraising activities and projects for charities in the climate action sector.
 										He also collaborates with other clubs and members for sustainable solutions on campus. </p>
 								</div>
 							</a></li>
