--- a/about.html
+++ b/about.html
@@ -112,6 +112,15 @@
 							<li class="thumb-wrap"><a href="">
 								<img class="thumb" src="images/about_page_pics/Coco_secretary.jpg" alt="">
 								<div class="thumb-info">
+									<p class="thumb-title">Anna Galvin</p>
+									<p class="thumb-user">Treasurer</p>
+									<p class="thumb-text">Anna is a sophomore student majoring in Cultural Movements with a track in Cultural Anthropology. 
+									She is interested in waste management and resusing, as well as teaching sustainability through education and books.</p>
+								</div>
+							</a></li>
+							<li class="thumb-wrap"><a href="">
+								<img class="thumb" src="images/about_page_pics/Coco_secretary.jpg" alt="">
+								<div class="thumb-info">
 									<p class="thumb-title">Coco Zhang</p>
 									<p class="thumb-user">Secretary</p>
 									<p class="thumb-text">Coco is a freshman student from Las Vegas, Nevada, intending to major in Institutions and Governance. She hopes to work in the environmental law and policy arena. 
