--- a/projects.html
+++ b/projects.html
@@ -67,9 +67,9 @@
 					  <div class="card_image"><img src="images/thrift store.jpg" width="500px" height="300px"></div>
 					  <div class="card_content">
 						<h2 class="card_title">Sustainable Film</h2>
-						<p class="card_text">In collaboration with the DKU Film Society and the DKU Arts & Humanities Centre, this project aims to raise awareness on current environmental and climate-related issues. 
+						<p class="card_text">In collaboration with the DKU Film Society and the DKU Arts & Humanities Centre, the Sustainable Film project aims to raise awareness on current environmental and climate-related issues. 
 							Films are carefully selected to hone in and illustrate on a specific sector of ecological issue. Coupled with fundraising and post-panel discussion opportunities, the screenings provide community engagement and helps promote sustainable practices on campus through the lenses of documentary and cinema. 
-							Previous screenings include Wall-E and Okja, with fundraising going to local NGOs of the relevant industry.</p>
+							Previous screenings include Wall-E, Okja, and KOYAANISQATSI, with fundraising from each film screening going to local NGOs.</p>
 						<!-- <button class="btn card_btn">Read More</button> -->
 					  </div>
 					</div>
@@ -85,6 +85,8 @@
 					  </div>
 					</div>
 				  </li>
+
+					
 				  <li class="cards_item">
 					<div class="card">
 					  <div class="card_image"><img src="images/thrift store.jpg" width="500px" height="300px" ></div>
@@ -109,15 +111,6 @@
 					  <div class="card_content">
 						<h2 class="card_title">Sustainable Photos</h2>
 						<p class="card_text">The project aims to create a gallery and a sustainability guide for the DKU community. We want to highlight existing sustainable and green initiatives in Kunshan, Shanghai, and the DKU campus to foster environmental responsibility.</p>
-					  </div>
-					</div>
-				  </li>
-				  <li class="cards_item">
-					<div class="card">
-					  <div class="card_image"><img src="images/cinema-2081795_1280.jpg" width="500px" height="300px"></div>
-					  <div class="card_content">
-						<h2 class="card_title">Film Screening</h2>
-						<p class="card_text">By organizing a film screening, this initiative will portray a sustainability-related film, host a community cinematic experience, and promote sustainability.</p>
 					  </div>
 					</div>
 				  </li>
