--- a/projects.html
+++ b/projects.html
@@ -70,7 +70,7 @@
 						<p class="card_text">In collaboration with the DKU Film Society and the DKU Arts & Humanities Centre, the Sustainable Film project aims to raise awareness on current environmental and climate-related issues. 
 							Films are carefully selected to hone in and illustrate on a specific sector of ecological issue. Coupled with fundraising and post-panel discussion opportunities, the screenings provide community engagement and helps promote sustainable practices on campus through the lenses of documentary and cinema. 
 							Previous screenings include Wall-E, Okja, and KOYAANISQATSI, with fundraising from each film screening going to local NGOs.</p>
-						<!-- <button class="btn card_btn">Read More</button> -->
+						<button class="btn card_btn">Read More</button>
 					  </div>
 					</div>
 				  </li>
